--- a/ISU_LDAP_LOGIN.html
+++ b/ISU_LDAP_LOGIN.html
@@ -4,13 +4,14 @@
         
         <title>Login Required - Illinois State University</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">        
-		<link href="./Login Required - Illinois State University_files/tool.css" type="text/css" rel="stylesheet" media="all">
-		<script src="./Login Required - Illinois State University_files/modernizr.js.download"></script>
+		<link href="./ISU_LDAP_LOGIN_files/tool.css" type="text/css" rel="stylesheet" media="all">
+		<script src="./ISU_LDAP_LOGIN_files/modernizr.js.download"></script>
     </head>
-    <body class="portalBody Mrphs-portalBody">
+    <body class="portalBody Mrphs-portalBody" style="background-color:Gray;">
     	<form id="Mrphs-xlogin" method="post" action="https://reggienetdev.illinoisstate.edu/portal/xlogin">
             <h1>Login Required</h1>
-            <p style="background:#af0000;text-align:center; color:white;">This page is an alternative way to login to ReggieNet.  You were redirected here because the University Central Login System is undergoing maintenance.  If you have questions or concerns, contact the Technology Support Center at 438-4357 or supportcenter@ilstu.edu </p>
+			<p style="background:#af0000;text-align:center; color:white;">This page is an alternative way to login to ReggieNet.  You were redirected here because the University Central Login System is undergoing maintenance.  If you have questions or concerns, contact the Technology Support Center at 438-4357 or supportcenter@ilstu.edu </p>
+           <!-- <aside class="logo"></aside> -->
         	    		<fieldset>	
     			<label for="eid">ULID</label>
     			<input name="eid" id="eid" value="" type="text" size="15">
@@ -37,12 +38,12 @@
     	        document.write('\x3Cscript src="/library/webjars/jquery/1.11.3/jquery.min.js">'+'\x3C/script>')
     	        document.write('\x3Cscript src="/library/webjars/jquery-migrate/1.4.0/jquery-migrate.min.js">'+'\x3C/script>')
     	    }
-    	</script><script src="./Login Required - Illinois State University_files/jquery.min.js.download"></script><script src="./Login Required - Illinois State University_files/jquery-migrate.min.js.download"></script>
+    	</script><script src="./ISU_LDAP_LOGIN_files/jquery.min.js.download"></script><script src="./ISU_LDAP_LOGIN_files/jquery-migrate.min.js.download"></script>
     	<script>
     	    $PBJQ = jQuery; // The Portal's jQuery (also in $ for now)
     	</script>
-    	<script src="./Login Required - Illinois State University_files/morpheus.plugins.min.js.download"></script>
-    	<script src="./Login Required - Illinois State University_files/morpheus.scripts.min.js.download"></script>
+    	<script src="./ISU_LDAP_LOGIN_files/morpheus.plugins.min.js.download"></script>
+    	<script src="./ISU_LDAP_LOGIN_files/morpheus.scripts.min.js.download"></script>
     
 
 </body></html>
